syntax = "proto3";
package searchpb;
option go_package="search/proto/golang;searchpb";

import "google/api/annotations.proto";


message Game{
    string home_team = 1;
    string away_team = 2;
    string game_date = 3;
}

message SearchGameRequest{
    Game game_request = 1;
  }

message SearchGameResponse{
  repeated Game games = 1;
}


service SearchService{
  rpc SearchGame(SearchGameRequest) 
    returns (SearchGameResponse) {
      option (google.api.http) = {
        post: "/v1/search/games"
        body: "*"
      };
    }
}

/* service SearchGateway { */
/*   rpc SearchGame(searchpb.SearchGameRequest) */
/*       returns (searchpb.SearchGameResponse) { */
/*     option (google.api.http) = { */
/*       get: "/v1/search/games" */
/*     }; */
/*   } */
/* } */
